# Boostcamp-AI-Tech-Product-Serving

./: .gitignore
.github/workflows/: deploy_docker.yml
part2/02-streamlit/examples/: sample_code.py  streamlit-basic.py
part3/01-fastapi/: README.md
part4/01-bentoml/: README.md
practice/01-streamlit/: predict.py
practice/02-fastapi/: pyproject.toml
practice/03-streamlit-fastapi/app/: database.py  frontend.py  load_data.py  main.py  predict.py  pyproject.toml
practice/fastapi/: 01_simple_webserver.py
practice/fastapi/app/: main.py
practice/st_practice/: app.py  predict.py
practice/streamlit/: predict.py
practice/streamlit-fastapi/app/: frontend.py  load_data.py  main.py  predict.py
